[JSC binding] Fix inconsistent behavior of DOMStringMap https://bugs.webkit.org/show_bug.cgi?id=53752

Reviewed by Darin Adler.

Source/WebCore:

The dataset behavior was inconsistent. The get operation handled
data-* attributes first, and the put and delete operations handled
JavaScript properties first.

Like Firefox and Opera, the put and delete operations should
handle data-* attribute first.

* bindings/js/JSDOMStringMapCustom.cpp:
(WebCore::JSDOMStringMap::deleteProperty):
 Handles DOMStringMap first, then returns false if the DOMStringMap makes an error.
(WebCore::JSDOMStringMap::putDelegate): ditto.

LayoutTests:

* fast/dom/dataset-expected.txt:
* fast/dom/script-tests/dataset.js:
 - Change the expectation for a case deleting a property of which name can't be a data-* attribute.
   This behavior matches to Firefox and Opera.
 - Add test cases to check put/get/delete priorities.
* platform/chromium/test_expectations.txt:
 V8 binding is not ready for this change.


Canonical link: https://commits.webkit.org/85651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96893 268f45cc-cd09-0410-ab3c-d52691b4dbfc